Bug 1159320: disable-webrtc builds fail after bug 1100502 applied. r=rjesup