media/webrtc/signaling/src/peerconnection/WebrtcGlobalInformation.cpp
@@ -3,6 +3,7 @@
  * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #include "WebrtcGlobalInformation.h"
+#include "mozilla/media/webrtc/WebrtcGlobal.h"
 #include "WebrtcGlobalChild.h"
 #include "WebrtcGlobalParent.h"
 
@@ -16,7 +17,6 @@
 #include "CSFLog.h"
 #include "WebRtcLog.h"
 #include "mozilla/dom/WebrtcGlobalInformationBinding.h"
-#include "WebrtcGlobal.h"
 #include "mozilla/dom/ContentChild.h"
 
 #include "nsAutoPtr.h"
